[tool.isort]
profile = "black"

[tool.poetry]
name = "eve-inotes"
version = "0.1.0"
description = ""
authors = ["austrotaxus <sergey.koziniy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
pandas = "==1.5"
pyinquirer = "==1.0.3"
pysqlite3 = "*"
numpy = "==1.23"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
alembic = "^1.12.0"
sqlalchemy = "^2.0.21"
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "*"
debugpy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
